Implement screen refresh system and language switching support
- Added `refresh_all_screens()` to controller to allow full UI rebuild on locale change

- Implemented `refresh()` method in `MainScreen` to rebuild widgets dynamically

- Enabled language switching with flag buttons and translated labels

- Fixed layout issues with flag borders by removing padding/highlights

- Adjusted combobox handling by saving selected index instead of translated value

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "hotkey": "F8",
-    "click_button": "Left Click",
-    "click_type": "Single Click",
-    "interval": 1.0
+    "click_button": "left",
+    "click_type": "single",
+    "interval": 0.5
 }
